Some minor Errors in advice gen, need to redo without using vite

--- a/advice-gen/src/App.css
+++ b/advice-gen/src/App.css
@@ -1,42 +1,77 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@700;800&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Manrope', sans-serif;
+}
+
+body{
+  background: hsl(218,23%,26%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.card{
+  background: hsl(217,19%,24%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  width: 540px;
+  padding: 3rem 2rem 4.5rem 2rem;
+  margin: 0 auto;
+  border-radius: 15px;
+  position: relative;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+p{
+  color: hsl(150, 100%,66%);
+  letter-spacing: 3.5px;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  font-size: 12px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+h2{
+  color: hsl(194, 48%, 86%);
+  font-size: 28px;
+  margin-bottom: 2.5rem;
+}
+
+.dice{
+  background: hsl(150, 100%,66%);
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: absolute;
+}
+
+.dice:hover{
+  box-shadow: 0 0 40px 0 rgba(82, 255, 169, 1);
+  transition: .2s ease-in;
+}
+
+@media (max-width: 620px) {
+  .card{
+    width: 90%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 375px) {
+  h2{
+    font-size: 24px;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  p{
+    font-size: 11px;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
